<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg4"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/toolBar"
        android:layout_height="140dp">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="0dp"
        android:background="@android:color/background_light">

        <TableRow android:background="@android:color/darker_gray">
            <TextView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="1.8"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col"
                android:textColor="@android:color/white"
                android:background="@drawable/border"
                android:textSize="18sp" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col1"
                android:textColor="@android:color/white"
                android:background="@drawable/border"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col2"
                android:textColor="@android:color/white"
                android:background="@drawable/border"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col3"
                android:textColor="@android:color/white"
                android:background="@drawable/border"
                android:textStyle="bold"
                android:textSize="15sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:layout_weight="4"
                android:gravity="center_horizontal"
                android:padding="10sp"
                android:text="@string/col4"
                android:textColor="@android:color/white"
                android:background="@drawable/border"
                android:textStyle="bold"
                android:textSize="15sp" />
        </TableRow>
    </TableLayout>

    </RelativeLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/toolBar"
        android:paddingLeft="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="100dp"
        android:id="@+id/recyclerView"
        android:layout_height="wrap_content">
    </androidx.recyclerview.widget.RecyclerView>

</androidx.constraintlayout.widget.ConstraintLayout>